develop commit improved gulp

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -30,15 +30,13 @@
 @import 'layouts/trailer';
 
 
-
-
-
 // COMPONENTS
 
 @import 'components/media-box';
 
-@import 'components/slick';
-
 @import 'components/character-view';
 
+// UTITLITIES
+
+@import 'utilities/slick-slider';
 
